--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="widht=device-width,initial-scale=1">
+        <link rel="stylesheet" href="assets/css/styles.css">
     </head>
     <body>
-        <script src="app.js"></script>
+        <audio id="song">
+            <source src="assets/audio/Disclosure_You_Me_Flume_Remix_Official_Video.mp3">
+        </audio>
+
+
+
+        <canvas id="gameScreen" width="800" height="600"></canvas>
+
+
+
+        <script type="module" src="src/app.js"></script>
     </body>
 </html>
